@@ -2,6 +2,15 @@
 
 	Resynced with GNU Classpath.
 
+	2005-05-18  Sven de Marothy <sven@physto.se>
+
+        * java/text/SimpleDateFormat.java
+        (computeOffset): Allow timezone to be first in the parsed String.
+
+2005-05-18  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
 	2005-05-16  Tom Tromey  <tromey@redhat.com>
 
         * gnu/java/net/protocol/http/Headers.java (parse): Include final
